プレビュー機能を実装。

--- a/SecureCoder/Course/HTML/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
+++ b/SecureCoder/Course/HTML/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
@@ -10,5 +10,7 @@
 #[#      #]#?[?<h1>?]?#[#HelloWorld#]#?[?</h1>?]?
 #[#      <!-- 見出し2でマークアップしてください -->#]#
 #[#      #]#?[?<h2>?]?#[#HelloWorld#]#?[?</h2>?]?
+#[#      <!-- titleクラスを設定してください -->#]#
+#[#      <p #]#?[?class="title"?]?#[#>Title</p>#]#
 #[#   </body>#]#
 #[#</html>#]#
