答えの文字を全て含むキーボードを実装。

--- a/SecureCoder/Courses/html/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
+++ b/SecureCoder/Courses/html/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
@@ -1,6 +1,6 @@
 @[@html@]@
 #[#<!-- HTML5のDOCTYPE宣言をしてください -->#]#
-?[?<!DOCTYPE html>?]?
+#[#<#]#?[?!DOCTYPE?]?#[# #]#?[?html?]?#[#>#]#
 #[#<html>#]#
 #[#   <head>#]#
 #[#      <link rel="stylesheet" href="style.css">#]#
@@ -11,6 +11,6 @@
 #[#      <!-- 見出し2でマークアップしてください -->#]#
 #[#      #]#?[?<h2>?]?#[#HelloWorld#]#?[?</h2>?]?
 #[#      <!-- titleクラスを設定してください -->#]#
-#[#      <p #]#?[?class="title"?]?#[#>Title</p>#]#
+#[#      <p #]#?[?class?]?#[#=#]#?[?"title"?]?#[#>Title</p>#]#
 #[#   </body>#]#
 #[#</html>#]#
