--- a/SecureCoder/Courses/html/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
+++ b/SecureCoder/Courses/html/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
@@ -1,4 +1,3 @@
-@[@html@]@
 #[#<!-- HTML5のDOCTYPE宣言をしてください -->#]#
 #[#<#]#?[?!DOCTYPE?]?#[# #]#?[?html?]?#[#>#]#
 #[#<html>#]#
@@ -11,6 +10,6 @@
 #[#      <!-- 見出し2でマークアップしてください -->#]#
 #[#      #]#?[?<h2>?]?#[#HelloWorld#]#?[?</h2>?]?
 #[#      <!-- titleクラスを設定してください -->#]#
-#[#      <p #]#?[?class?]?#[#=#]#?[?"title"?]?#[#>Title</p>#]#
+#[#      <p #]#?[?class?]?#[#="#]#?[?title?]?#[#">Title</p>#]#
 #[#   </body>#]#
 #[#</html>#]#
