phpファイルがサーバ上に作成されるように修正。

--- a/SecureCoder/Courses/html/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
+++ b/SecureCoder/Courses/html/HTMLの基礎を学ぼう/DOCTYPE宣言/files/index.html
@@ -1,15 +1,16 @@
-#[#<!-- HTML5のDOCTYPE宣言をしてください -->#]#
+#[#<!-- HTML5で文書を作成することを宣言してください -->#]#
 #[#<#]#?[?!DOCTYPE?]?#[# #]#?[?html?]?#[#>#]#
-#[#<html>#]#
-#[#   <head>#]#
-#[#      <link rel="stylesheet" href="style.css">#]#
-#[#   </head>#]#
-#[#   <body>#]#
-#[#      <!-- 見出し1でマークアップしてください -->#]#
-#[#      #]#?[?<h1>?]?#[#HelloWorld#]#?[?</h1>?]?
-#[#      <!-- 見出し2でマークアップしてください -->#]#
-#[#      #]#?[?<h2>?]?#[#HelloWorld#]#?[?</h2>?]?
-#[#      <!-- titleクラスを設定してください -->#]#
-#[#      <p #]#?[?class?]?#[#="#]#?[?title?]?#[#">Title</p>#]#
-#[#   </body>#]#
+#[#<html lang="ja">#]#
+#[#  <head>#]#
+#[#    <meta charset="utf-8">#]#
+#[#    <link rel="stylesheet" href="style.css">#]#
+#[#  </head>#]#
+#[#  <body>#]#
+#[#    <!-- 見出し1でマークアップしてください -->#]#
+#[#    #]#?[?<h1>?]?#[#HelloWorld#]#?[?</h1>?]?
+#[#    <!-- 見出し2でマークアップしてください -->#]#
+#[#    #]#?[?<h2>?]?#[#HelloWorld#]#?[?</h2>?]?
+#[#    <!-- titleクラスに設定してください -->#]#
+#[#    #]##[#<p #]#?[?class?]?#[#="#]#?[?title?]?#[#">タイトル</p>#]#
+#[#  </body>#]#
 #[#</html>#]#
